Added skills section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -28,10 +28,30 @@
             
         </div>
         
-        <div>
+        <div class="skills-section">
             <a name="skills">
                 <h2>Skills</h2>
             </a>
+            <div class="flex-container">
+                <div>
+                    <h3>Python</h3>
+                    <img class="skills-img" src="../Static/python.jpeg" alt="">
+                </div>
+                <div>
+                    <h3>C</h3>
+                    <img class="skills-img" src="../Static/Cpl.jpg" alt="">
+                </div>
+                <div>
+                    <h3>MySQL</h3>
+                    <img class="skills-img" src="../Static/mysql.jpg" alt="">
+                </div>
+                <div>
+                    <h3>Django</h3>
+                    <img class="skills-img" src="../Static/django.jpg" alt="">
+                </div>
+            </div>
+
+
         </div>
         <div>
             <a name="projects">
