Added project image

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -57,7 +57,8 @@
             <a name="projects">
                 <b><h2>Projects</h2></b>
             </a>
-            <h3>Seller Database Management System</h1>
+            <h3 class="sdbs-title">Seller Database Management System</h1>
+            <img class="sdbs" src="../Static/sdbs.PNG" alt="database management">
             <p>The project is built using <b>Python</b> GUI library Tkinter and using MySQL database. It provides GUI to MySQL database using MySQL connector library.
                 <br>Some features of this project include</p>
                 <ul>
