--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <!-- for seo -->
         <meta name="Portfolio" content="Static page">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/main.css">
+        <link rel="stylesheet" href="CSS/main.css">
     </Head>
 
     <body>
@@ -23,7 +23,7 @@
 
         <div class="flex-container">
             
-            <div><img class="pro-pic" src="../static/edit pro pic.png" alt="photo"></div>
+            <div><img class="pro-pic" src="static/edit pro pic.png" alt="photo"></div>
             <div><h1 class="full-name">Akshay Bhatia</h1></div>
             
         </div>
@@ -35,19 +35,19 @@
             <div class="flex-container">
                 <div>
                     <h3>Python</h3>
-                    <img class="skills-img" src="../Static/python.jpeg" alt="">
+                    <img class="skills-img" src="Static/python.jpeg" alt="">
                 </div>
                 <div>
                     <h3>C</h3>
-                    <img class="skills-img" src="../Static/Cpl.jpg" alt="">
+                    <img class="skills-img" src="Static/Cpl.jpg" alt="">
                 </div>
                 <div>
                     <h3>MySQL</h3>
-                    <img class="skills-img" src="../Static/mysql.jpg" alt="">
+                    <img class="skills-img" src="Static/mysql.jpg" alt="">
                 </div>
                 <div>
                     <h3>Django</h3>
-                    <img class="skills-img" src="../Static/django.jpg" alt="">
+                    <img class="skills-img" src="Static/django.jpg" alt="">
                 </div>
             </div>
 
@@ -58,7 +58,7 @@
                 <b><h2>Projects</h2></b>
             </a>
             <h3 class="sdbs-title">Seller Database Management System</h1>
-            <img class="sdbs" src="../Static/sdbs.PNG" alt="database management">
+            <img class="sdbs" src="Static/sdbs.PNG" alt="database management">
             <div class=project-div>
                 <p>The project is built using <b>Python</b> GUI library Tkinter and using MySQL database. It provides GUI to MySQL database using MySQL connector library.
                     <br>Some features of this project include</p>
