Hosting image fix

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="flex-container">
             
-            <div><img class="pro-pic" src="static/edit pro pic.png" alt="photo"></div>
+            <div><img class="pro-pic" src="Static/editpropic.png" alt="photo"></div>
             <div><h1 class="full-name">Akshay Bhatia</h1></div>
             
         </div>
